Добавлятет адаптивность хедера

--- a/index.html
+++ b/index.html
@@ -17,66 +17,73 @@
 
   <body>
     <header class="page-header">
-      <div class="page-nav">
-        <a href="./index.html" class="logo page-header__logo"
-          >Web <span class="logo__accent">Studio</span></a
-        >
-        <div class="menu-container" id="menu-container" data-menu>
-          <nav class="page-nav__list">
-            <ul class="site-nav">
-              <li class="site-nav__item site-nav__item--active">
-                <a
-                  href="./index.html"
-                  class="site-nav__link site-nav__link--active"
-                  >Студия</a
-                >
+      <div class="container">
+        <div class="page-nav">
+          <a href="./index.html" class="logo page-header__logo"
+            >Web <span class="logo__accent">Studio</span></a
+          >
+          <div class="menu-container" id="menu-container" data-menu>
+            <nav class="page-nav__list">
+              <ul class="site-nav">
+                <li class="site-nav__item site-nav__item--active">
+                  <a
+                    href="./index.html"
+                    class="site-nav__link site-nav__link--active"
+                    >Студия</a
+                  >
+                </li>
+                <li class="site-nav__item">
+                  <a href="./portfolio.html" class="site-nav__link"
+                    >Портфолио</a
+                  >
+                </li>
+                <li class="site-nav__item">
+                  <a href="./contacts.html" class="site-nav__link">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+            <ul class="contacts-list">
+              <li class="contacts-list__item">
+                <a href="mailto:info@devstudio.com" class="contacts-list__link">
+                  <svg class="contacts-list__icon" width="16" height="11">
+                    <use href="./images/sprite.svg#envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
               </li>
-              <li class="site-nav__item">
-                <a href="./portfolio.html" class="site-nav__link">Портфолио</a>
-              </li>
-              <li class="site-nav__item">
-                <a href="./contacts.html" class="site-nav__link">Контакты</a>
+              <li class="contacts-list__item">
+                <a href="tel:+380961111111" class="contacts-list__link">
+                  <svg class="contacts-list__icon" width="10" height="15">
+                    <use href="./images/sprite.svg#cell"></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
               </li>
             </ul>
-          </nav>
-          <ul class="contacts-list">
-            <li class="contacts-list__item">
-              <a href="mailto:info@devstudio.com" class="contacts-list__link">
-                <svg class="contacts-list__icon" width="16" height="11">
-                  <use href="./images/sprite.svg#envelope"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="contacts-list__item">
-              <a href="tel:+380961111111" class="contacts-list__link">
-                <svg class="contacts-list__icon" width="10" height="15">
-                  <use href="./images/sprite.svg#cell"></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
-        </div>
-        <button
-          type="button"
-          class="menu-button"
-          aria-expanded="false"
-          data-menu-button
-        >
-          <svg
-            width="40"
-            height="40"
-            aria-label="Переключатель мобильного меню"
-            aria-controls="menu-container"
+          </div>
+          <button
+            type="button"
+            class="menu-button"
+            aria-expanded="false"
+            data-menu-button
           >
-            <use
-              class="icon-cross"
-              href="./images/sprite.svg#closed-mark"
-            ></use>
-            <use class="icon-menu" href="./images/sprite.svg#icon-check"></use>
-          </svg>
-        </button>
+            <svg
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+              aria-controls="menu-container"
+            >
+              <use
+                class="icon-cross"
+                href="./images/sprite.svg#closed-mark"
+              ></use>
+              <use
+                class="icon-menu"
+                href="./images/sprite.svg#icon-check"
+              ></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </header>
     <main>
@@ -662,7 +669,7 @@
         </button>
       </form>
     </div> -->
-    <!-- <script>
+    <script>
       (() => {
         document
           .querySelector('.js-speaker-form')
@@ -678,6 +685,6 @@
       })();
     </script>
     <script src="./js/menu.js"></script>
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
