--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         </div>
         <div class="connection-box">
           <b class="connection-box__title">присоединяйтесь</b>
-          <ul class="social">
+          <ul class="social connection-box__social">
             <li class="social__item">
               <a
                 href="#"
