меняет иконка в выпадающем меню мобильной версии

--- a/index.html
+++ b/index.html
@@ -75,12 +75,9 @@
             >
               <use
                 class="icon-cross"
-                href="./images/sprite.svg#closed-mark"
+                href="./images/sprite.svg#close_40px"
               ></use>
-              <use
-                class="icon-menu"
-                href="./images/sprite.svg#icon-check"
-              ></use>
+              <use class="icon-menu" href="./images/sprite.svg#menu_40px"></use>
             </svg>
           </button>
         </div>
@@ -160,7 +157,7 @@
 
       <!-- occupation -->
 
-      <section class="section">
+      <section class="section hidden">
         <div class="container mobile-container">
           <h2 class="container__title">Чем мы занимаемся</h2>
           <ul class="occupation">
