--- a/portfolio.html
+++ b/portfolio.html
@@ -334,82 +334,84 @@
 
     <footer>
       <div class="container-footer">
-        <div class="address-box">
-          <div class="wrapper__logo">
-            <a href="./index.html" class="logo address-box__logo"
-              >Web&nbsp;<span class="logo__accent logo__accent--invers"
-                >Studio</span
-              >
-            </a>
+        <div class="tablets-box">
+          <div class="address-box">
+            <div class="wrapper__logo">
+              <a href="./index.html" class="logo address-box__logo"
+                >Web&nbsp;<span class="logo__accent logo__accent--invers"
+                  >Studio</span
+                >
+              </a>
+            </div>
+            <address class="address">
+              <ul>
+                <li class="address__list">
+                  <a href="" class="address__link address__link--main-color"
+                    >г. Киев, пр-т Леси Украинки, 26</a
+                  >
+                </li>
+                <li class="address__list">
+                  <a href="mailto:info@devstudio.com" class="address__link"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="address__list">
+                  <a href="tel:+380961111111" class="address__link"
+                    >+38 099 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
           </div>
-          <address class="address">
-            <ul>
-              <li class="address__list">
-                <a href="" class="address__link address__link--main-color"
-                  >г. Киев, пр-т Леси Украинки, 26</a
+          <div class="connection-box">
+            <b class="connection-box__title">присоединяйтесь</b>
+            <ul class="social connection-box__social">
+              <li class="social__item">
+                <a
+                  href="#"
+                  aria-label="ссылка на instagram"
+                  class="social__link social__link--theme_footer"
                 >
+                  <svg class="social__icon social__icon--theme_footer">
+                    <use href="./images/sprite.svg#instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address__list">
-                <a href="mailto:info@devstudio.com" class="address__link"
-                  >info@example.com</a
+              <li class="social__item">
+                <a
+                  href="#"
+                  aria-label="ссылка на twitter"
+                  class="social__link social__link--theme_footer"
                 >
+                  <svg class="social__icon social__icon--theme_footer">
+                    <use href="./images/sprite.svg#twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address__list">
-                <a href="tel:+380961111111" class="address__link"
-                  >+38 099 111 11 11</a
+              <li class="social__item">
+                <a
+                  href="#"
+                  aria-label="ссылка на facebook"
+                  class="social__link social__link--theme_footer"
                 >
+                  <svg class="social__icon social__icon--theme_footer">
+                    <use href="./images/sprite.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a
+                  href="#"
+                  aria-label="ссылка на linkedin"
+                  class="social__link social__link--theme_footer"
+                >
+                  <svg class="social__icon social__icon--theme_footer">
+                    <use href="./images/sprite.svg#linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="connection-box">
-          <b class="connection-box__title">присоединяйтесь</b>
-          <ul class="social">
-            <li class="social__item">
-              <a
-                href="#"
-                aria-label="ссылка на instagram"
-                class="social__link social__link--theme_footer"
-              >
-                <svg class="social__icon social__icon--theme_footer">
-                  <use href="./images/sprite.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a
-                href="#"
-                aria-label="ссылка на twitter"
-                class="social__link social__link--theme_footer"
-              >
-                <svg class="social__icon social__icon--theme_footer">
-                  <use href="./images/sprite.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a
-                href="#"
-                aria-label="ссылка на facebook"
-                class="social__link social__link--theme_footer"
-              >
-                <svg class="social__icon social__icon--theme_footer">
-                  <use href="./images/sprite.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a
-                href="#"
-                aria-label="ссылка на linkedin"
-                class="social__link social__link--theme_footer"
-              >
-                <svg class="social__icon social__icon--theme_footer">
-                  <use href="./images/sprite.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <form class="subscribe-box">
           <b class="subscribe-box__title">Подпишитесь на рассылку</b>
