добавляет шляпу в ГЕРОЕ!!!!

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             Заказать услугу
           </button>
         </div>
+        <div class="box"></div>
       </section>
 
       <!-- features -->
@@ -154,8 +155,8 @@
 
       <!-- occupation -->
 
-      <section class="section">
-        <div class="container mobile-container">
+      <section class="section mobile-section">
+        <div class="container">
           <h2 class="container__title">Чем мы занимаемся</h2>
           <ul class="occupation">
             <li class="occupation__item">
