--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
               aria-label="Переключатель мобильного меню"
               aria-controls="menu-container"
             >
-              <use class="icon-cross" href="./images/sprite.svg#cross"></use>
-              <use class="icon-menu" href="./images/sprite.svg#menu"></use>
+              <use
+                class="icon-cross"
+                href="./images/sprite.svg#close_40px"
+              ></use>
+              <use class="icon-menu" href="./images/sprite.svg#menu_40px"></use>
             </svg>
           </button>
         </div>
